Authenticate the PAC document, and cache its answers per question (TB-388)
F4 -- the PAC file was fetched over plain http:// with nothing checking where
it came from, then handed straight to the interpreter as the program that
decides, per destination, where the tunnel's traffic goes. On the CONNECT path
that includes which host receives the --proxy-userpwd credential. Owning the
WPAD name on a corporate LAN is the classic position for that attack, and it is
exactly where --pac-local gets used. The policy is loaded once for the life of
the process, so one successful tamper persists.

A plain http:// URL is now refused unless pinned with --pac-local-sha256, and
the refusal fires before anything is fetched. Refused rather than warned about:
a warning on a startup line nobody reads is not a decision the operator made.
An https URL or a local file needs no pin; the pin is the escape hatch for an
http URL that cannot be changed, and it is honoured for any source, because a
digest the operator supplied and we ignored would be worse than refusing it. A
malformed pin is refused too -- it could never match, and accepting it leaves
the operator believing the document is checked.

Redirects are no longer followed. HttpURLConnection follows by default, so the
document could come from somewhere other than the place that was configured,
which is the thing being established.

--pac-test loads through the same path, digest included: a check that accepted a
document the tunnel would refuse is worse than no check.

F13 -- resolve() cached by host, but the interpreter is given url as well and
may branch on it. Whichever request for a host arrived first chose the route for
every later one, so a client could pick which decision applied. Keyed by both
arguments now. Callers pass a synthetic "scheme://host:port/", so this stays one
entry per scheme and port rather than growing per path -- a CONNECT to host:443
and a ws:// upgrade to host:80 are different questions and no longer share an
a